# llm-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  middleware.rs
src/api/: chat_completion.rs  create_embedding.rs  create_image.rs  mod.rs  speech.rs  transcription.rs  whisper.rs
