[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
derive_builder = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
    "multipart",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
schemars = "0.8.16"
bytes = "1.5.0"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
ctor = "0.2.5"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
